# mini-max

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  mqtt_publisher.py  mqtt_utils.py  mqtt_worker.py  new_text.csv  pyproject.toml  run_all.py
app/: main.py
app/core/: config.py
app/scripts/: init_mini_max.py  test_text.csv
app/services/: inference.py
app/stt/src/: handler.py
apps/core/src/: main.py
apps/nlp_router/: README.md
apps/nlp_router/scripts/: init_mini_max.py
apps/nlp_router/src/: main.py
apps/nlp_router/src/api/: text.py
apps/nlp_router/src/models/: text.py
apps/stt/src/: main.py
minimax/: cli.py  mqtt_publisher.py  mqtt_utils.py  mqtt_worker.py
minimax/app/: main.py
minimax/app/api/: text.py
minimax/app/core/: config.py
minimax/app/models/: base.py  text.py
minimax/app/plugins/: shift_vibe.py  temp_sensor.py
minimax/app/plugins/actions/: vibe_shift.py
minimax/app/scripts/: init_mini_max.py  test_text.csv
minimax/app/services/: inference.py
minimax/app/stt/src/: handler.py  main.py
minimax/data/lancedb/init_qa_action.lance/_transactions/: 0-d5459a10-e327-4ef0-8d56-dde3247f08b7.txn  1-9fcf09b8-bd11-40d2-97d1-b7820392c8d4.txn
minimax/data/lancedb/init_qa_action.lance/data/: d252a40f-ebd0-409c-af8c-df034c6af46f.lance
minimax/services/mqtt/src/: main.py
plugins/: shift_vibe.py
plugins/actions/: vibe_shift.py
services/mqtt/: pyproject.toml
src/stt/: main.py  pyproject.toml
