[project]
name = "mini-max"
version = "0.1.0"
description = "Illigitimi non carborundum"
authors = [
    { name = "Blake Danson", email = "blakedanson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "lancedb>=0.21.2",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "sentence-transformers>=4.1.0",
    "pydantic-settings>=2.9.1",
    "jupyterlab>=4.4.3",
    "ipykernel>=6.29.5",
    "transformers[torch]>=4.51.3",
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
minimax = "minimax.cli:main"  # Creates a command-line tool

[project.optional-dependencies]
jetson = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "sounddevice>=0.5.1",
    "wavio>=0.0.9",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    "pyttsx3>=2.98",
]
macos = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "sounddevice>=0.5.1",
    "wavio>=0.0.9",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    "pyttsx3>=2.98",
]
windows = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.7.0",
    "sounddevice>=0.5.1",
    "wavio>=0.0.9",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "webrtcvad>=2.0.10",
    "pyttsx3>=2.98",
]

[tool.uv]
package = true
default-groups = ["macos"]
conflicts = [
    [
      { group = "jetson" },
      { group = "macos" },
      { group = "windows" },
    ],
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
minimax = ["app/scripts/test_text.csv"]  # This will include only test_text.csv

