[tool.poetry]
name = "stt"
version = "0.1.0"
description = "Speech to text module for MiniMax"
authors = ["Blake Danson <blakedanson@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.5.1"
wavio = "^0.0.9"
openai-whisper = "^20240930"
pyaudio = "^0.2.14"
webrtcvad = "^2.0.10"
pyttsx3 = "^2.98"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
